Agregar categoria de solicitud cancelada
